# llm-config-hub

./: .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE.md  OPEN-SOURCE-RELEASE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.claude/: settings.local.json
.github/workflows/: release-macos.yml
.trae/skills/: svg-logo-designer
docs/: app-icon.md
public/: splashscreen.html
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/templates/builtin/claude-code/: deploy.sh  manifest.json  restore-default.sh  save-default.sh
src-tauri/resources/templates/builtin/codex/: deploy.sh  manifest.json  restore-default.sh  save-default.sh
src-tauri/resources/templates/builtin/cursor/: deploy.sh  manifest.json  restore-default.sh  save-default.sh
src-tauri/resources/templates/builtin/gemini-cli/: deploy.sh  manifest.json  restore-default.sh  save-default.sh
src-tauri/resources/templates/builtin/opencode/: deploy.sh  manifest.json  restore-default.sh  save-default.sh
src-tauri/src/: lib.rs  types.rs
src-tauri/src/commands/: clipboard.rs  health.rs  import.rs  mod.rs  model.rs  shell.rs  target.rs
src-tauri/src/services/: clipboard_parser.rs  health_check.rs  mod.rs  secure_store.rs  ssh_client.rs
src-tauri/src/services/importers/: mod.rs
src-tauri/src/templates/: loader.rs  mod.rs  types.rs
src/components/: ConfigManager.tsx  (+9 more)
(+12 files in other folders)
